k8s/prometheus/prometheus-deployment.yaml
# Copyright 2016-2018 Nicolas Lamirault <nicolas.lamirault@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations: {}
  labels:
    provider: jarvis
  name: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
      - args:
        - -config.file=/config/prometheus.yml
        - -storage.local.path=/prometheus
        - -web.console.libraries=/etc/prometheus/console_libraries
        - -web.console.templates=/etc/prometheus/consoles
        - -storage.local.memory-chunks=120000
        - -alertmanager.url=http://alertmanager
        - -web.external-url=http://prometheus.sf-prp.620nm.net
        image: zeiot/rpi-prometheus:v2.8.1
        imagePullPolicy: Always
        name: prometheus
        ports:
        - containerPort: 9090
          protocol: TCP
        resources:
          limits:
            cpu: '1'
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 128Mi
        serviceAccount: prometheus-operator
        serviceAccountName: prometheus-operator
        volumeMounts:
          - name: prometheus-data
            mountPath: "/mnt"
          - name: prometheus-config
            mountPath: "/config"
        volumes:
          - name: prometheus-data
            persistentVolumeClaim:
              claimName: prometheus-data
          - name: prometheus-config
            persistentVolumeClaim:
              claimName: prometheus-config
