k8s/prometheus/prometheus-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    provider: jarvis
  name: prometheus
spec:
  ports:
  - name: prometheus
    port: 80
    protocol: TCP
    targetPort: 9090
  selector:
    app: prometheus
  type: ClusterIP
